--- a/functions/package.json
+++ b/functions/package.json
@@ -2,12 +2,20 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
-    "firebase": "^4.6.0",
+    "cron": "^1.3.0",
+    "es6-promise-pool": "^2.5.0",
+    "firebase": "^4.6.1",
     "firebase-admin": "^5.2.1",
     "firebase-functions": "^0.6.3",
-    "fs": "0.0.1-security",
     "gmail": "^0.5.0",
-    "nodemailer": "^4.3.1"
+    "mathjs": "^3.16.5",
+    "node-cron": "^1.2.1",
+    "nodemailer": "^4.3.1",
+    "ping": "^0.2.2",
+    "request-promise": "^4.2.2",
+    "secure-compare": "^3.0.1",
+    "twilio": "^3.10.0",
+    "uniq": "^1.0.1"
   },
   "private": true
 }
