--- a/functions/package.json
+++ b/functions/package.json
@@ -5,13 +5,15 @@
     "cron": "^1.3.0",
     "es6-promise-pool": "^2.5.0",
     "firebase": "^4.6.1",
-    "firebase-admin": "^5.2.1",
-    "firebase-functions": "^0.6.3",
+    "firebase-admin": "^5.6.0",
+    "firebase-functions": "^0.7.5",
+    "fusioncharts": "^3.12.2",
     "gmail": "^0.5.0",
     "mathjs": "^3.16.5",
     "node-cron": "^1.2.1",
     "nodemailer": "^4.3.1",
     "ping": "^0.2.2",
+    "plotly.js": "^1.31.2",
     "request-promise": "^4.2.2",
     "secure-compare": "^3.0.1",
     "twilio": "^3.10.0",
